// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FooterNewsletter
    pathname="/foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex items-center relative"
>
          <div
                    className="flex flex-column justify-center items-center my2"
          >
                    <p
                              className="small carter center absolute"
                    >
                              Get the inside scoop on new flavors, discounts and more.
                    </p>
                    <p
                              className="text-peach center"
                    >
                              Sign up for our newsletter!
                    </p>
          </div>
          <Image
                    alt="Decorative arrow"
                    bg={false}
                    className="my2 xs-hide sm-hide icon"
                    onImgLoad={[Function]}
                    src="/assets/images/arrow-straight-right.svg"
                    style={Object {}}
          />
</div>,
        <MailchimpSubscribe
          render={[Function]}
          url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
      ],
      "className": "py4 px3 flex items-center z-1",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column justify-center items-center my2"
>
              <p
                            className="small carter center absolute"
              >
                            Get the inside scoop on new flavors, discounts and more.
              </p>
              <p
                            className="text-peach center"
              >
                            Sign up for our newsletter!
              </p>
</div>,
            <Image
              alt="Decorative arrow"
              bg={false}
              className="my2 xs-hide sm-hide icon"
              onImgLoad={[Function]}
              src="/assets/images/arrow-straight-right.svg"
              style={Object {}}
/>,
          ],
          "className": "flex items-center relative",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="small carter center absolute"
>
                  Get the inside scoop on new flavors, discounts and more.
</p>,
                <p
                  className="text-peach center"
>
                  Sign up for our newsletter!
</p>,
              ],
              "className": "flex flex-column justify-center items-center my2",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Get the inside scoop on new flavors, discounts and more.",
                  "className": "small carter center absolute",
                },
                "ref": null,
                "rendered": "Get the inside scoop on new flavors, discounts and more.",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Sign up for our newsletter!",
                  "className": "text-peach center",
                },
                "ref": null,
                "rendered": "Sign up for our newsletter!",
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "Decorative arrow",
              "bg": false,
              "children": null,
              "className": "my2 xs-hide sm-hide icon",
              "onImgLoad": [Function],
              "src": "/assets/images/arrow-straight-right.svg",
              "style": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "render": [Function],
          "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex items-center relative"
>
            <div
                        className="flex flex-column justify-center items-center my2"
            >
                        <p
                                    className="small carter center absolute"
                        >
                                    Get the inside scoop on new flavors, discounts and more.
                        </p>
                        <p
                                    className="text-peach center"
                        >
                                    Sign up for our newsletter!
                        </p>
            </div>
            <Image
                        alt="Decorative arrow"
                        bg={false}
                        className="my2 xs-hide sm-hide icon"
                        onImgLoad={[Function]}
                        src="/assets/images/arrow-straight-right.svg"
                        style={Object {}}
            />
</div>,
          <MailchimpSubscribe
            render={[Function]}
            url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
        ],
        "className": "py4 px3 flex items-center z-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center items-center my2"
>
                <p
                                className="small carter center absolute"
                >
                                Get the inside scoop on new flavors, discounts and more.
                </p>
                <p
                                className="text-peach center"
                >
                                Sign up for our newsletter!
                </p>
</div>,
              <Image
                alt="Decorative arrow"
                bg={false}
                className="my2 xs-hide sm-hide icon"
                onImgLoad={[Function]}
                src="/assets/images/arrow-straight-right.svg"
                style={Object {}}
/>,
            ],
            "className": "flex items-center relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="small carter center absolute"
>
                    Get the inside scoop on new flavors, discounts and more.
</p>,
                  <p
                    className="text-peach center"
>
                    Sign up for our newsletter!
</p>,
                ],
                "className": "flex flex-column justify-center items-center my2",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Get the inside scoop on new flavors, discounts and more.",
                    "className": "small carter center absolute",
                  },
                  "ref": null,
                  "rendered": "Get the inside scoop on new flavors, discounts and more.",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Sign up for our newsletter!",
                    "className": "text-peach center",
                  },
                  "ref": null,
                  "rendered": "Sign up for our newsletter!",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "Decorative arrow",
                "bg": false,
                "children": null,
                "className": "my2 xs-hide sm-hide icon",
                "onImgLoad": [Function],
                "src": "/assets/images/arrow-straight-right.svg",
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "render": [Function],
            "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FooterNewsletter
    pathname=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="flex items-center relative"
>
          <div
                    className="flex flex-column justify-center items-center my2"
          >
                    <p
                              className="small carter center absolute"
                    >
                              Get the inside scoop on new flavors, discounts and more.
                    </p>
                    <p
                              className="text-peach center"
                    >
                              Sign up for our newsletter!
                    </p>
          </div>
          <Image
                    alt="Decorative arrow"
                    bg={false}
                    className="my2 xs-hide sm-hide icon"
                    onImgLoad={[Function]}
                    src="/assets/images/arrow-straight-right.svg"
                    style={Object {}}
          />
</div>,
        <MailchimpSubscribe
          render={[Function]}
          url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
      ],
      "className": "py4 px3 flex items-center z-1",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="flex flex-column justify-center items-center my2"
>
              <p
                            className="small carter center absolute"
              >
                            Get the inside scoop on new flavors, discounts and more.
              </p>
              <p
                            className="text-peach center"
              >
                            Sign up for our newsletter!
              </p>
</div>,
            <Image
              alt="Decorative arrow"
              bg={false}
              className="my2 xs-hide sm-hide icon"
              onImgLoad={[Function]}
              src="/assets/images/arrow-straight-right.svg"
              style={Object {}}
/>,
          ],
          "className": "flex items-center relative",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="small carter center absolute"
>
                  Get the inside scoop on new flavors, discounts and more.
</p>,
                <p
                  className="text-peach center"
>
                  Sign up for our newsletter!
</p>,
              ],
              "className": "flex flex-column justify-center items-center my2",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Get the inside scoop on new flavors, discounts and more.",
                  "className": "small carter center absolute",
                },
                "ref": null,
                "rendered": "Get the inside scoop on new flavors, discounts and more.",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Sign up for our newsletter!",
                  "className": "text-peach center",
                },
                "ref": null,
                "rendered": "Sign up for our newsletter!",
                "type": "p",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "alt": "Decorative arrow",
              "bg": false,
              "children": null,
              "className": "my2 xs-hide sm-hide icon",
              "onImgLoad": [Function],
              "src": "/assets/images/arrow-straight-right.svg",
              "style": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "render": [Function],
          "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="flex items-center relative"
>
            <div
                        className="flex flex-column justify-center items-center my2"
            >
                        <p
                                    className="small carter center absolute"
                        >
                                    Get the inside scoop on new flavors, discounts and more.
                        </p>
                        <p
                                    className="text-peach center"
                        >
                                    Sign up for our newsletter!
                        </p>
            </div>
            <Image
                        alt="Decorative arrow"
                        bg={false}
                        className="my2 xs-hide sm-hide icon"
                        onImgLoad={[Function]}
                        src="/assets/images/arrow-straight-right.svg"
                        style={Object {}}
            />
</div>,
          <MailchimpSubscribe
            render={[Function]}
            url="https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa"
/>,
        ],
        "className": "py4 px3 flex items-center z-1",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="flex flex-column justify-center items-center my2"
>
                <p
                                className="small carter center absolute"
                >
                                Get the inside scoop on new flavors, discounts and more.
                </p>
                <p
                                className="text-peach center"
                >
                                Sign up for our newsletter!
                </p>
</div>,
              <Image
                alt="Decorative arrow"
                bg={false}
                className="my2 xs-hide sm-hide icon"
                onImgLoad={[Function]}
                src="/assets/images/arrow-straight-right.svg"
                style={Object {}}
/>,
            ],
            "className": "flex items-center relative",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="small carter center absolute"
>
                    Get the inside scoop on new flavors, discounts and more.
</p>,
                  <p
                    className="text-peach center"
>
                    Sign up for our newsletter!
</p>,
                ],
                "className": "flex flex-column justify-center items-center my2",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Get the inside scoop on new flavors, discounts and more.",
                    "className": "small carter center absolute",
                  },
                  "ref": null,
                  "rendered": "Get the inside scoop on new flavors, discounts and more.",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Sign up for our newsletter!",
                    "className": "text-peach center",
                  },
                  "ref": null,
                  "rendered": "Sign up for our newsletter!",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "alt": "Decorative arrow",
                "bg": false,
                "children": null,
                "className": "my2 xs-hide sm-hide icon",
                "onImgLoad": [Function],
                "src": "/assets/images/arrow-straight-right.svg",
                "style": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "render": [Function],
            "url": "https://amplehills.us9.list-manage.com/subscribe/post?u=45ed3f1291b1f51d971f051ff&id=9783303dfa",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
